@@ -1,4 +1,4 @@
-@set UPDATED 9 June 2009
+@set UPDATED 14 June 2009
 @set UPDATED-MONTH June 2009
 @set EDITION 1.1
 @set VERSION 1.1
